Version 3   ???

--Fixed crash when rising out right onto a rise marker that will cause and
  immediate, subsequent rise (thanks Stephen Lavelle).

--Removed empty power-up tokens completely from all floors to reduce
  confusion about their function and increase tactical richness when trying
  to de-power an enemy.

--Fixed to ignore hidden files in playbackGame directory (a problem on Mac OS
  where .DS_STORE files are created automatically by the OS).

--Fixed memory leak upon quit during rise-out.



Version 2    2010-December-29

Initial release to beta testers.